2002-07-04  Andras Varga

	* cdispstr.h added: utility class cDisplayString

2002-07-03  Andras Varga

	* csimul.cc (doOneEvent()): bugfix: added missing ev.messageDelivered()
	call that could cause a "phantom" message being animated in Tkenv with
        handleMessage()-based simple modules

2002-06-27  Andras Varga

	* cexception.cc/h added; most opp_error() calls replaced with 
	throw new cException(...). Exceptions are caught in 
	cSimpleModule::activate() (for activity()-based modules) and
	in cSimulation::doOneEvent() (for handleMessage()-based modules),
	and converted to 'conventional' opp_error(). 

	* TBD: rethink error handling wrt exceptions!

2002-06-24  Andras Varga

	* ccoroutine.h/cc: use Fiber API on Windows

2002-06-17  Andras Varga

	* cpar.cc: new feature: cPar can use compiled expressions subclassed 
	from cDoubleExpression (new class). This is needed for code generated
	by the new, nedxml-based nedc. 

2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>

	* cdensity.cc, chist.cc, cksplit.cc, cmodule.cc, cobject.cc,
	cpar.cc, cpsquare.cc, csimul.cc, cstat.cc, ctypes.cc, cvarhist.cc:
	do not include iostream.h et.al. directly (already included by
	header files)
	
	* cmessage.cc (decapsulate): added check for encapmsg==0 before
	accessing encapmsg->len

2002-05-16  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* mpi/mpimod.h (class cNetGate): fixed className() declaration
	(class cMpiMod): dito.

	* pvm/pvmmod.h (class cNetGate): fixed className() declaration
	(class cPvmMod): dito.

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* pvm/pvmpack.cc (upack_object): compile fix: cast from (void*) to
	(cObject*) in call to createOne()

2002-03-05  Andras Varga

	* cgate.cc (setDisplayString): connection display string changes now
        take effect immediately. Implementation: notify parent module's 
        inspector. (This is should not be the final solution though; it would